# GameEngine

./: .gitattributes  CMakeLists.txt  LICENSE  Readme.md  imgui.ini  stuff.txt  todo.txt
dependencies/: CMakeLists.txt
dependencies/GLFW/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt  imgui_demo.cpp  imgui_impl_glfw.cpp
dependencies/include/assimp/: CMakeLists.txt
shaders/: debug_quad_depth.frag  deferred_shader.frag  g_buffer.frag  g_buffer.vert  normal_vis.geom  normal_vis.vert  normals_point_shadows.frag  normals_point_shadows.vert  point_shadows.frag  point_shadows.vert  shadow_mapping.frag  terrain_colors.frag  terrain_colors.vert
shaders/tutorials/: advanced_lighting.frag  advanced_lighting.vert  colors.frag  colors.vert  cube_to_flat.frag  deferred_shader.frag  framebuffer.frag  g_buffer.vert  grid.frag  instance.frag  lamp.frag  point_shadows.frag  point_shadows.vert  terrain_colors.frag
src/: CMakeLists.txt  Entity.cpp  Entity.h  Environment.h  HeightMap.cpp  HeightMap.h  Light.cpp  Light.h  Lighting.h  Noise.cpp  Primitive.cpp  Primitive.h  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShadowMap.h  Terrain.cpp  Terrain.h  camera.h  cube.h  engine.cpp  engine.h  libs.h  main.cpp  main_defs.h  mesh.cpp  mesh.h  model.cpp  model.h  primitivesolid.cpp  primitivesolid.h  renderutil.h  shader.cpp  shader.h  shape.cpp  shape.h  test_scenes.cpp  (+11 more)
src/buffer-objects/: BufferObject.h  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  ShadowCubeDepthBuffer.cpp  ShadowCubeDepthBuffer.h  ShadowDepthBuffer.cpp  ShadowDepthBuffer.h  gBuffer.cpp  gBuffer.h
src/common/: CMakeLists.txt  libs.h  test_scenes.cpp  test_scenes.h
src/editor/: CMakeLists.txt  Editor.cpp  Editor.h
src/editor/tools/: CMakeLists.txt  ImageViewer.cpp  ModelViewer.cpp  ModelViewer.h  TextureViewer.cpp  TextureViewer.h  Tool.cpp
src/editor/ui/: CMakeLists.txt  MainWindow.h  UIDataWindow.cpp  UIDataWindow.h  UIRenderWindow.cpp  UIRenderWindow.h  UIWindow.cpp  UIWindow.h
src/engine/: CMakeLists.txt  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Scene.cpp  Scene.h  engine.cpp
src/engine/interfaces/physics/bullet/: CMakeLists.txt  CommonRigidBodyBase.h  PhysicsIntegration.cpp  PhysicsInterface.h  SimplePhysicsIntegration.cpp  SimplePhysicsIntegration.h
src/image/: CMakeLists.txt  CubeMap.cpp  CubeMap.h  Image.h  TextureLibrary.h  texture.cpp  texture.h
src/imgui/: CMakeLists.txt  imgui.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/math/noise/: Noise.cpp  Noise.h
src/noise/: CMakeLists.txt  Noise.h  NoiseMap.cpp  NoiseMap.h  PerlinNoise.cpp  PerlinNoise.h
src/physics/interfaces/: CMakeLists.txt
src/physics/interfaces/bullet/: CMakeLists.txt  CommonRigidBodyBase.h  PhysicsIntegration.cpp
src/primitives/: CMakeLists.txt  Icosahedron.cpp  Icosahedron.h  Primitive.cpp  Primitive.h  SkyBox.cpp  SkyBox.h  Sphere.cpp  Sphere.h  Terrain.cpp  Terrain.h  vertex.h
src/primitives/depreciated/: CubeStuff.cpp  cube.h
src/rendering/: CMakeLists.txt  Lighting.cpp  Lighting.h  Renderer.cpp  Renderer.h  camera.cpp  camera.h  mesh.h  model.cpp  model.h  renderutil.cpp  renderutil.h
src/rendering/buffer-objects/: BufferObject.cpp  BufferObject.h  FrameBuffer.cpp  FrameBuffer.h  ShadowCubeDepthBuffer.cpp  ShadowCubeDepthBuffer.h  ShadowDepthBuffer.cpp  ShadowDepthBuffer.h  gBuffer.cpp  gBuffer.h
src/rendering/image/: CMakeLists.txt  CubeMap.h  Image.cpp  TextureLibrary.cpp  TextureLibrary.h  texture.cpp  texture.h
src/rendering/lighting/: CMakeLists.txt  Light.cpp  Light.h  SpotLight.cpp  SpotLight.h
src/rendering/primitives/: CMakeLists.txt  Icosahedron.h  Primitive.h  SkyBox.cpp  SkyBox.h  Sphere.cpp  Terrain.cpp  Terrain.h
src/rendering/primitives/depreciated/: cube.cpp  cube.h
src/rendering/shader/: ShaderLibrary.cpp  ShaderLibrary.h  shader.cpp
src/shader/: CMakeLists.txt  ShaderLibrary.h  shader.cpp  shader.h
src/tools/: CMakeLists.txt  ImageViewer.h  ModelViewer.cpp  ModelViewer.h  NoiseMapViewer.cpp  NoiseMapViewer.h  TextureViewer.cpp  TextureViewer.h  Tool.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  UIDataWindow.cpp  UIDataWindow.h  UIRenderWindow.cpp  UIRenderWindow.h  UITestWindow.cpp  UITestWindow.h  UIWindow.cpp  UIWindow.h
